k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynatrace-carto
spec:
  selector:
    app: dynatrace-carto
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
